se modifico el css de product-detail y se agrego al index

--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
       </div>
     </aside>
 
+    <aside class="product-detail-emergent">
+        <div class="product-detail-emergent-close"><img src="Icons/icon_close.png" alt="Icon Close"></div>
+        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
+        <div class="product-info-emergent">
+            <p>$ 120,00</p>
+            <p>Retro refrigerator</p>
+            <p>With its functional and practical interior, this refrigerator also fulfills a decorative function, adding personality and a retro-vintage aesthetic to your kitchen or workplace.</p>
+            <button class="primary-button button_add-to-cart">
+                <img src="./Icons/bt_add_to_cart.svg" alt="add to cart">Add to cart
+            </button>
+        </div>
+    </aside>
+
     <section class="main-container">
         <div class="cards-container">
 
