--- a/product-detail.html
+++ b/product-detail.html
@@ -11,10 +11,10 @@
     <title>Product Detail | Platzi Yard Sale</title>
 </head>
 <body>
-    <aside class="product-detail">
-        <div class="product-detail-close"><img src="Icons/icon_close.png" alt="Icon Close"></div>
+    <aside class="product-detail-emergent">
+        <div class="product-detail-emergent-close"><img src="Icons/icon_close.png" alt="Icon Close"></div>
         <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
-        <div class="product-info">
+        <div class="product-info-emergent">
             <p>$ 120,00</p>
             <p>Retro refrigerator</p>
             <p>With its functional and practical interior, this refrigerator also fulfills a decorative function, adding personality and a retro-vintage aesthetic to your kitchen or workplace.</p>
