Se permite la interaccion de todos los componentes en la pagina con js

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
     </aside>
 
-    <aside class="product-detail-emergent">
+    <aside class="product-detail-emergent inactive">
         <div class="product-detail-emergent-close"><img src="Icons/icon_close.png" alt="Icon Close"></div>
         <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
         <div class="product-info-emergent">
